--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,24 +9,14 @@ on:
       - main
 
 jobs:
-  build:
+  jenkinsfile-runner-prepackaged:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: Archive Artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-artifacts
-          path: target/
+    - name: Run Jenkinsfile with Jenkinsfile Runner
+      uses: jenkinsci/jenkinsfile-runner-github-actions/jenkinsfile-runner-prepackaged@v1
+      with:
+        version: '1.0'
+        jenkinsfile: './Jenkinsfile'  # Specify the path to your Jenkinsfile
