--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,6 +17,17 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    - name: Set up Java 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'adopt'
+
+    - name: Download Jenkinsfile Runner
+      run: |
+        curl -L -o jenkinsfile-runner.tar.gz https://repo.jenkins-ci.org/releases/io/jenkins/jenkinsfile-runner/jenkinsfile-runner/1.0-beta-24/jenkinsfile-runner-1.0-beta-24.tar.gz
+        tar -xvzf jenkinsfile-runner.tar.gz
+
     - name: Run Jenkinsfile
       uses: jenkinsci/jenkinsfile-runner-github-actions/jenkinsfile-runner-prepackaged@v1
       with:
